# deepdive

./: .editorconfig  .gitignore  Cargo.toml  notice-templates.txt  rust-toolchain.toml
.cargo/: config.toml
deepdive-bin/: Cargo.toml
deepdive-bin/src/: main.rs
deepdive-physics/src/: lib.rs  water_setup.rs
deepdive-physics/src/body/: mod.rs
deepdive-physics/src/physics/: mod.rs
deepdive-state/: Cargo.toml
deepdive-state/src/: lib.rs  state.rs
lib/deepdive-logic/: Cargo.toml
lib/deepdive-logic/src/: camera.rs  human.rs  lib.rs  player.rs
lib/deepdive-logic/src/controller/: mod.rs  player.rs
lib/deepdive-logic/src/pawn/: human.rs  mod.rs
lib/deepdive-physics/: Cargo.toml
lib/deepdive-physics/src/: lib.rs  misc.rs  water_setup.rs
lib/deepdive-physics/src/body/: mod.rs
lib/deepdive-physics/src/message/: mod.rs
lib/deepdive-physics/src/physics/: buoyancy.rs  gravity.rs  mod.rs
lib/deepdive-physics/src/setup/: mod.rs  physics.rs  water.rs
lib/deepdive-state/: Cargo.toml
lib/deepdive-state/src/: lib.rs  state.rs  toggle.rs
