# Copyright (C) 2026 Anatnaso
#
# This file is part of Project Deep Dive.
#
# Project Deep Dive is free software: you can redistribute it and/or modify it under the terms of
# the GNU General Public License as published by the Free Software Foundation, either
# version 3 of the License, or any later version.
#
# Project Deep Dive is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# Project Deep Dive. If not, see <https://www.gnu.org/licenses/>.
#

[workspace]
resolver = "3"
members = [
    "lib/deepdive-state",
    "lib/deepdive-physics",
    "lib/deepdive-logic",
    "deepdive-bin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

authors = ["Anatnaso <antondev@kuthy.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Anothernaso/deepdive"
homepage = "https://github.com/Anothernaso/deepdive"

[workspace.dependencies]
bevy = "0.18"

deepdive-state = { path = "lib/deepdive-state" }
deepdive-physics = { path = "lib/deepdive-physics" }
deepdive-logic = { path = "lib/deepdive-logic" }
